--- a/index.html
+++ b/index.html
@@ -8,10 +8,7 @@
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/todomvc-common@1.0.5/base.css"
     />
-    <link
-      rel="stylesheet"
-      href="https://cdn.jsdelivr.net/npm/todomvc-app-css@2.3.0/index.css"
-    />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.3/css/bulma.min.css"/>
 
     <link data-trunk rel="rust" />
   </head>
