--- a/mnemnos-wasm/index.html
+++ b/mnemnos-wasm/index.html
@@ -10,6 +10,11 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 
+    <style>
+      .resizer { display:flex; margin:0; padding:0; resize:vertical; overflow:hidden }
+      .resizer > .resized { flex-grow:1; margin:0; padding:0; border:0 }
+    </style>
+
     <link data-trunk rel="rust" />
   </head>
   <body></body>
